--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,26 @@
-.row {
-  width: 100%;
-  margin: 0 auto;
-}
+.container-fluid {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-.coloumn1{
-float: left;
-	width:70px;
-}
-.coloumn2{
-float: left;
-	width:140px;
-}
-.div.coloumn3{
-float: left;
-	width:280px;
-}
+  .col-sm-4 {
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+  }
+
+  .col-sm-2 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+
+  .col-sm-1 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .movie-img {
+    width: 100%;
+    height: auto;
+  }
+ 
 /* Your CSS Code here. */
